<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_user_agreement"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:fillViewport="false"
            app:title="@string/title_activity_activity_user_agreement"
            app:titleTextColor="@color/white"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            >
        </android.support.v7.widget.Toolbar>
    </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:singleLine="false"
        android:text="@string/user_agreement"
        android:textSize="@dimen/homeitemcontentsize" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="40dp"
        android:singleLine="false"
        android:text="@string/user_help"
        android:textSize="@dimen/homeitemcontentsize" />

</LinearLayout>