<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_verification_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/input_verify_message"
            android:textColor="@color/bigTitleColor"
            android:textSize="@dimen/titleSize"
            />

        <TextView
            android:id="@+id/tv_verification_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_verification_title"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/verification_can_not_be_null"
            android:textColor="@color/smallTitleColor"
            />

        <EditText
            android:id="@+id/et_request"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@id/tv_verification_message"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:background="@drawable/edit_background"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/et_request"
            android:layout_marginTop="10dp"
            android:background="@color/grayBackground"
            android:orientation="horizontal"
            android:paddingTop="1dp"
            >

            <RelativeLayout
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="?android:selectableItemBackground"
                >

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/cancle"
                    android:textColor="@color/bigTitleColor"
                    android:textSize="@dimen/bigTitleSize"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tv_confirm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:background="?android:selectableItemBackground"
                >
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/confirm"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/bigTitleSize"
                    />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>