<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:id="@+id/rl_add_contact_request"
    android:background="@color/white">

    <ImageView
        android:id="@+id/iv_add_head_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_centerVertical="true"
        />

    <TextView
        android:id="@+id/tv_add_contact_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_toRightOf="@id/iv_add_head_icon"
        android:layout_alignTop="@id/iv_add_head_icon"
        android:textSize="@dimen/bigTitleSize"
        android:textColor="@color/gray"
        android:text="@string/user_name"
        />

    <RelativeLayout
        android:id="@+id/layout_status"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true">
    <Button
        android:id="@+id/bt_add_contact"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_centerVertical="true"
        android:layout_marginRight="12dp"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:textSize="@dimen/bigTitleSize"
        android:text="@string/add"
        android:textColor="@color/white"
        />
    <TextView
        android:id="@+id/tv_already_add"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="12dp"
        android:textSize="@dimen/bigTitleSize"
        android:gravity="center"
        android:textColor="@color/gray"
        android:text="@string/addAlready"
        android:visibility="gone"
        />
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_add_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/tv_add_contact_name"
        android:layout_alignLeft="@id/tv_add_contact_name"
        android:layout_toLeftOf="@id/layout_status"
        android:layout_toStartOf="@id/layout_status"
        android:layout_below="@id/tv_add_contact_name"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="5dp"
        android:singleLine="true"
        android:textSize="@dimen/tagSize"
        android:textColor="@color/timeColor"
        />
</RelativeLayout>